# caldera_renderer

./: .clang-format  .gitignore  .gitmessage  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  LEARNING_AUDIT.md  README.md  ROADMAP.md  STYLE.md  TODO.md  clone_dependencies.bat
shaders/: shader.slang
source/: main.cpp
source/core/: assert.cpp  assert.h  commandManager.h  debugUtils.h  gpuTimer.h  log.cpp  log.h  swapchain.cpp  swapchain.h  syncObjects.h  validation.h  vulkanContext.cpp  vulkanContext.h
source/rendering/: framegraph.cpp  framegraph.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h
source/resources/: buffer.cpp  buffer.h  image.cpp  image.h
source/scene/: CMakeLists.txt  sceneLoader.cpp  sceneLoader.h  scene_loader.cpp  scene_loader.h
source/ui/: imguiLayer.cpp  imguiLayer.h
tools/: clang-format-diff.py  codebase_bundler.py  compile_shaders.bat  scan_scenes.py
